# MoCap

./: .gitignore  CMakeLists.txt  Ket_Qua_Thuc_Nghiem_SIL.xlsx  Makefile  README.md  mocap_record_1776562143.csv  sil_mocap_sim.py
3D_visual/: main.py
comm/: master.py  slave.py
include/: img_processing.hpp  main.hpp  processor_3d.hpp  sil_camera_simulator.hpp
source/: main.cpp  main_archive.cpp
src/3D_visual/: main.py
src/buildServer/: CMakeCache.txt  Makefile  MocapServer  cmake_install.cmake
src/buildSlave/: CMakeCache.txt  Makefile  MocapSlave  cmake_install.cmake
src/cmake/server/: CMakeLists.txt
src/cmake/slave/: CMakeLists.txt
src/lib/: frameQueue.hpp  lib.hpp  log.hpp
src/lib/src/: frameQueue.cpp
src/server/: orchestrator.hpp  processor.hpp  receiver.hpp
src/server/src/: main.cpp  orchestrator.cpp  processor.cpp  receiver.cpp
src/slave/: imgProcessing.hpp  receiver.hpp  sender.hpp
src/slave/src/: imgProcessing.cpp  main.cpp  receiver.cpp  sender.cpp
